kustomize/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
  namespace: nginx
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 80
    name: nginx
  selector:
    app: nginx
  type: ClusterIP
