kustomize/nginx/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-ui-ingress
  namespace: nginx
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.phils-home.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 8081
